--- a/showcase/style.css
+++ b/showcase/style.css
@@ -5,8 +5,8 @@
   border: none;
 }
 
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 html {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   background: rgb(255, 254, 249);
 }
